--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "graphql": "^15.5.0",
+    "i18next": "^19.8.9",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.1.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.2",
